<resources>
    <string name="app_name">MyBookie</string>
    <string name="publish_date">Publish Date</string>
    <string name="pages">Pages</string>
    <string name="author">Authors:</string>
    <string name="preview">Preview</string>
    <string name="title">Title:</string>
    <string name="category">Category:</string>
    <string name="not_specified">not specified</string>
    <string name="no_description">no description</string>


</resources>